--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bem-bl-xjst-test",
-    "author": "einstain",
+    "author": "- - -",
     "version": "0.0.0",
     "description": "test",
     "repository": "bem-bl-xjst-test",
